style(android): fix PMD checks